logs/dubbo-zookeeper-thrift.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dubbo_zookeeper_thrift'...
Compiling './lib/python3.5/site-packages/dubbo_zookeeper_thrift/__init__.py'...
***   File "./lib/python3.5/site-packages/dubbo_zookeeper_thrift/__init__.py", line 66
    print "service : %s, server:%s, params:%s, success:%s, time:%s"%(service,server,params,success,time.strftime('%Y-%m-%d %H:%M:%S', time.gmtime()))
                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dubbo_zookeeper_thrift/base_thrift_client.py'...
***   File "./lib/python3.5/site-packages/dubbo_zookeeper_thrift/base_thrift_client.py", line 56
    print "client make success"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dubbo_zookeeper_thrift/dubbo_thrift_manager.py'...
***   File "./lib/python3.5/site-packages/dubbo_zookeeper_thrift/dubbo_thrift_manager.py", line 76
    print "client make success"
                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dubbo_zookeeper_thrift/dubbo_zk_manager.py'...
***   File "./lib/python3.5/site-packages/dubbo_zookeeper_thrift/dubbo_zk_manager.py", line 45
    print "kazoo is lost"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dubbo_zookeeper_thrift-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
